--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>pinit</title>
+    <title>PinIt</title>
+    <link rel="stylesheet" href="//bootswatch.com/yeti/bootstrap.min.css">
   </head>
   <body>
     <div id="app"></div>
