--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <title>PinIt</title>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="//bootswatch.com/yeti/bootstrap.min.css">
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="app"></div>
